Modify contact.html file

--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Email: me@me.me</h1>
     <p>Instructor</p>
+    <p>Adding this for the sole purpose of testing the 'git merge' command</p>
 </body>
 </html>
